# ru-bignn-23

./: .gitignore  CMakeLists.txt  README.md  requirements_py3.10.txt  rubignn.py
apps/: CMakeLists.txt  base_label_to_label_file.cpp  build_stitched_index.cpp  degree_profiling.cpp  find_connected_components.cpp  search_contest.cpp  search_multi_tag.cpp  test.cpp
apps/utils/: CMakeLists.txt
contest-scripts/: docker_run_container.sh  docker_run_container_build_small.sh  docker_run_container_search.sh  search_runner.sh  search_yfcc10M.sh
include/: abstract_index.h  filter_utils.h  index.h  utils.h
pybindings/: .gitignore  index_bindings.cpp  setup.py
src/: abstract_index.cpp  filter_utils.cpp  in_mem_graph_store.cpp  index.cpp  math_utils.cpp
